argocd/apps/minecraft/manifests/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mc
spec:
  replicas: 1
  serviceName: mc
  revisionHistoryLimit: 3
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      server: mc
  template:
    metadata:
      labels:
        server: mc
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - name: mc
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25565
              protocol: TCP
          image: itzg/minecraft-server:java21
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 150m
              memory: 8Gi
          livenessProbe:
            exec:
              command: ["mc-health"]
            initialDelaySeconds: 120
            periodSeconds: 60
          readinessProbe:
            exec:
              command: ["mc-health"]
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 12
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
