argocd/apps/minecraft/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: minecraft-app
  name: mc-httproute
  namespace: minecraft
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: minecraft
  rules:
  - backendRefs:
    - name: mc
      namespace: minecraft
      port: 25565
